# cacheX

./: .gitignore  CMakeLists.txt  PROTOCOL  PROTOCOL.md  README.md
include/: cacheX_client.h  cacheX_client.hpp  cacheX_protocol.hpp  common.hpp  hashmap.hpp  server.h  server.hpp
scripts/: build.sh  clang_format.sh  setup.sh
src/: main.cpp  server.c  server.cpp
src/client/: cacheX_client.c  cacheX_client.cpp  main.c  main.cpp
tests/: client.c  client.cpp
